frontend/test/should_pass/exact_009.grg
rule r {
	x:Node;
	y:Node;

	exact(x);

	x --> y;

	replace {
	}
}

