frontend/test/should_fail/dangle_014.grg
test r(-a:Edge->) {
    -a-> x:Node;
    y:Node -a->;
}
